--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>2 Do List</h2>
-        <input type="text" id="taskInput">
+        <input type="text" id="item">
         <button id="addButton">Add</button>
         <ul id="taskList"></ul>
     </div>
