--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h2>2 Do List</h2>
         <input type="text" id="item">
-        <button id="addButton">Add</button>
+        <button onclick="add()" id="addButton">Add</button>
         <ul id="taskList"></ul>
     </div>
     <script src="to-do.js"></script>
