--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h2>2 Do List</h2>
         <input type="text" id="item">
         <button onclick="add()" id="addButton">Add</button>
+        <button onclick="del()" id = deleteButton>Delete</button>
         <ul id="taskList"></ul>
     </div>
     <script src="to-do.js"></script>
