--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <div class="container">
+        <div class="to-do-list>
         <h2>2 Do List</h2>
         <input type="text" id="item">
         <button onclick="add()" id="addButton">Add</button>
-        <ul id="taskList"></ul>
         <button onclick="del()" id = deleteButton>Delete</button>
+    </div>
+        <ul id="taskList"></ul>
     </div>
     <script src="to-do.js"></script>
 </body>
