--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button onclick="add()" id="addButton">Add</button>
         <button onclick="del()" id = deleteButton>Delete</button>
     </div>
-        <ul id="taskList"></ul>
+        <ul class="to-do-list></ul>
     </div>
     <script src="to-do.js"></script>
 </body>
