--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="to-do-list>
+        <div class="to-do-app>
         <h2>2 Do List</h2>
         <input type="text" id="item">
         <button onclick="add()" id="addButton">Add</button>
