--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
     <link rel="stylesheet" href="to-do.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
 </head>
 <body>
     <div class="container">
         <div class="to-do-app>
         <h2>2 Do List</h2>
         <input type="text" id="item">
-        <button onclick="add()" id="addButton">Add</button>
-        <button onclick="del()" id = deleteButton>Delete</button>
+            <br>
+            <br>
+        <button onclick="add()">Add <i class="ri-add-box-line"></i></button>
+        <button onclick="del()">Delete <i class="ri-delete-bin-line"></i></button>
     </div>
         <ul class="to-do-list></ul>
     </div>
