--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button onclick="add()">Add <i class="ri-add-box-line"></i></button>
         <button onclick="del()">Delete <i class="ri-delete-bin-line"></i></button>
     </div>
-        <ul class="to-do-list></ul>
+        <ul class="to-do-list"></ul>
     </div>
     <script src="to-do.js"></script>
 </body>
