--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="to-do-app>
+        <div class="to-do-app">
         <h2>2 Do List</h2>
         <input type="text" id="item">
             <br>
             <br>
-        <button onclick="add()">Add <i class="ri-add-box-line"></i></button>
+        <button onclick="add()">Add Item<i class="ri-add-box-line"></i></button>
         <button onclick="del()">Delete <i class="ri-delete-bin-line"></i></button>
     </div>
         <ul class="to-do-list"></ul>
