--- a/index.html
+++ b/index.html
@@ -11,17 +11,11 @@
 />
 </head>
 <body>
-    <div class="container">
-        <div class="to-do-app">
-        <h2>2 Do List</h2>
-        <input type="text" id="item">
-            <br>
-            <br>
-        <button onclick="add()">Add Item<i class="ri-add-box-line"></i></button>
-        <button onclick="del()">Delete <i class="ri-delete-bin-line"></i></button>
-    </div>
-        <ul class="to-do-list"></ul>
-    </div>
+   <h2>To-Do List</h2>
+    <input type="text" id="todo-input" placeholder="Enter a task">
+    <button onclick="addItem()">Add Item</button>
+    <button onclick="clearList()">Clear All</button>
+    <ul id="todo-List"></ul>
     <script src="to-do.js"></script>
 </body>
 </html>
