--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <input type="text" id="todo-input" placeholder="Enter a task">
     <button onclick="addItem()">Add Item</button>
     <button onclick="clearList()">Clear All</button>
-    <ul id="todo-List"></ul>
+    <ul id="todo-list"></ul>
     <script src="to-do.js"></script>
 </body>
 </html>
